# stkclient

./: .cookiecutter.json  .flake8  .pre-commit-config.yaml  .tool-versions  LICENSE.rst  README.md  README.rst  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  release.yml  tests.yml
docs/: conf.py  index.rst  reference.rst  requirements.txt  usage.rst
src/: auth.py  main.py  storage.py
src/sendtokindle/: api.py  auth.py  main.py  signer.py  signer_test.py  xml.py
src/stkclient/: __init__.py  __main__.py  api.py  auth.py  client.py  model.py  signer.py
stubs/defusedxml/: ElementTree.pyi
stubs/httpretty/: __init__.pyi  core.pyi  errors.pyi
tests/: __init__.py  conftest.py  test_api.py  test_client.py  test_main.py  test_signer.py
