[tool.poetry]
name = "sendtokindle"
version = "0.1.0"
description = "Python library for sending books to kindle over http"
authors = ["Max Johnson <mjohnson@plaid.com>"]

[tool.poetry.dependencies]
python = "^3.7"
PyQt5 = "^5.15.5"
requests = "^2.26.0"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]
PyQt5-stubs = "^5.15.2"
pytest = "^6.2.5"
types-requests = "^2.25.11"
lxml-stubs = "^0.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
