[tool.poetry]
name = "sendtokindle"
version = "0.1.0"
description = "Python library for sending books to kindle over http"
authors = ["Max Johnson <mjohnson@plaid.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"
lxml = "^4.6.3"
rsa = "^4.7.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
types-requests = "^2.25.11"
lxml-stubs = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
